# mcp-hub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: claude_desktop_config.json
mcp_hub/: __init__.py  server_crypto.py  server_csv.py  server_http.py  server_notes.py  server_reminder.py  server_system.py  server_weather.py  server_web_search.py
